# nitypes-python

./: .gitignore  .markdownlint.yml  CONTRIBUTING.md  README.md  poetry.lock.orig  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-poetry/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: CI.yml  PR.yml  check_docs.yml  check_nitypes.yml  publish.yml  publish_test_results.yml  report_test_results.yml  report_test_results_fork.yml  run_unit_tests.yml  run_unit_tests_oldest_deps.yml  test_results.yml  test_results_status.yml
benchmarks/bintime/: test_datetime.py  test_timedelta.py
docs/: binary-time.rst  complex-numbers.rst  conf.py  index.rst  intro.inc  scalars.rst  waveforms.rst
examples/: placeholder.py
scripts/: increment_version.py  pin_oldest_deps.py
src/nitypes/: __init__.py  _arguments.py  _exceptions.py  _numpy.py  _numpy1x.py  _typing.py  scalar.py  vector.py  xy_data.py
src/nitypes/bintime/: __init__.py  _absolute.py  _absolute_time.py  _absolutetime.py  _datetime.py  _datetime_array.py  _time_value.py  _timedelta.py  _timedelta_array.py  _timevalue.py  _whole_and_fractional_seconds.py
src/nitypes/complex/: __init__.py  _complexint.py  _complexint32.py  _conversion.py  _dtypes.py
src/nitypes/scalar/: __init__.py  _scalar.py  _scalar_base.py  _scalar_data.py
src/nitypes/time/: __init__.py  _conversion.py  _types.py
src/nitypes/vector/: __init__.py  _vector.py
src/nitypes/waveform/: __init__.py  _analog.py  _analog_waveform.py  _base_timing.py  _common_config.py  _complex.py  _complex_waveform.py  _exceptions.py  _extended_properties.py  _numeric.py  _options.py  _precision_timing.py  _spectrum.py  _timing.py  _utils.py  exceptions.py  typing.py  warnings.py
tests/: __init__.py
tests/acceptance/: __init__.py
tests/acceptance/waveform/: __init__.py  test_memmap.py
tests/benchmark/: __init__.py
tests/benchmark/bintime/: __init__.py  test_datetime.py  test_datetime_array.py  test_timedelta.py  test_timedelta_array.py
tests/unit/: __init__.py  test_placeholder.py
tests/unit/bintime/: __init__.py  test_absolute_time.py  test_absolutetime.py  test_datetime.py  test_datetime_array.py  test_time_value.py  test_timedelta.py  test_timedelta_array.py  test_timevalue.py
tests/unit/complex/: __init__.py  test_complexint.py  test_complexint32.py  test_conversion.py  test_dtypes.py
tests/unit/scalar/: __init__.py  test_scalar.py  test_scalar_data.py
tests/unit/time/: __init__.py  test_conversion.py
tests/unit/vector/: __init__.py  test_vector.py
tests/unit/waveform/: __init__.py  test_analog_waveform.py  test_complex_waveform.py  test_digital_state.py  test_digital_waveform.py  test_digital_waveform_signal.py  test_extended_property_dictionary.py  test_precision_timing.py  test_spectrum.py  test_timing.py
(+36 files in other folders)
